<resources>
    <string name="app_name">Alodokter Test</string>

    <!-- DIALOG -->
    <string name="please_wait">Please wait ...</string>

    <!--ALERT DIALOG -->
    <string name="alert_downloading">Downloading</string>
    <string name="alert_downloading_message">An error occurs. Please try again!</string>
    <string name="alert_ok_button">OK</string>
    <string name="alert_cancel_button">Cancel</string>
    <string name="no_internet_title">No internet</string>
    <string name="no_internet_description">Please check your connection!</string>
    <string name="error_fetching_remote_data_title">Error fetching data from server!</string>
    <string name="error_fetching_remote_data_description">An error occurs while fetching data from server. Please try again later!</string>

    <!--LOGIN PAGE -->
    <string name="login_page_app_bar_title">Login</string>
    <string name="login_page_input_username">Username</string>
    <string name="login_page_input_password">Password</string>
    <string name="login_page_positive_button">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login">Login</string>

    <!--REGISTRATION PAGE -->
    <string name="registration_page_positive_button">Register</string>
    <string name="font_path_grotesk">fonts/grotesk/Tele-GroteskNor.ttf</string>
    <string name="font_path_caviardreams">fonts/caviardreams/caviardreams.ttf</string>
    <string name="location_tour_list_page_app_bar_title">Location</string>
    <string name="prompt_name">Username</string>
    <string name="prompt_password">Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile_name">Rizky Nalandya fauzi</string>
    <string name="jenis_kelamin">Male</string>
    <string name="phone_number">+6285959601878</string>


</resources>
